# phistory

./: AGENTS.md  README.md  README_zh.md  index.html  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: capture.yml  pages.yml
captures/: index.json
captures/antigravity/1.0.10/: meta.json  prompt.md  trace.jsonl
captures/antigravity/1.0.11/: meta.json  trace.jsonl
captures/antigravity/1.0.12/: meta.json  trace.jsonl
captures/antigravity/1.0.13/: meta.json  trace.jsonl
captures/antigravity/1.0.4/: meta.json  prompt.md  trace.jsonl
captures/antigravity/1.0.5/: meta.json  prompt.md  trace.jsonl
captures/antigravity/1.0.6/: meta.json  trace.jsonl
captures/antigravity/1.0.7/: meta.json  prompt.md  trace.jsonl
captures/antigravity/1.0.8/: meta.json  trace.jsonl
captures/antigravity/1.0.9/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.144/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.145/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.146/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.147/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.148/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.149/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.152/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.153/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.154/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.156/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.157/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.158/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.160/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.161/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.162/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.163/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.167/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.168/: meta.json  prompt.md  trace.jsonl
captures/claude-code/2.1.170/: meta.json  static-candidates.json  static-prompts.json  static-prompts.md
captures/claude-code/2.1.172/: meta.json  static-candidates.json  static-prompts.json  static-prompts.md
captures/claude-code/2.1.173/: meta.json  prompt.md  static-candidates.json  static-prompts.json  static-prompts.md  trace.jsonl
captures/claude-code/2.1.175/: meta.json  static-candidates.json  static-prompts.json  static-prompts.md
captures/claude-code/2.1.176/: meta.json  prompt.md  static-candidates.json  static-prompts.json  static-prompts.md  trace.jsonl
docs/: captures.md
docs/agent-icons/: SOURCES.md
phistory/: capture.py  cli.py  dummy_upstream.py  models.py  npm.py  packages.py  registry.py  render.py  site.py  storage.py  workflow.py
phistory/static_prompts/: __init__.py  bun.py  catalog.py  extract.py  javascript.py  models.py
tests/: test_capture_e2e.py  test_cli_observability.py  test_dummy_upstream.py  test_npm.py  test_packages.py  test_registry.py  test_static_prompts.py  test_storage_render.py
(+335 files in other folders)
