[project]
name = "phistory"
version = "0.1.0"
description = "Automatically archived system prompt snapshots and diffs for agent CLIs."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "WEIFENG2333" }]
dependencies = [
    "claude-tap>=0.1.102,<0.2",
    # Development fallback for unreleased claude-tap changes:
    # "claude-tap @ git+https://github.com/WEIFENG2333/claude-tap.git@upstream-prompt-export",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
]

[project.scripts]
phistory = "phistory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["phistory"]

[tool.hatch.build.targets.sdist]
only-include = ["phistory", "tests", "README.md", "README_zh.md", "pyproject.toml", "uv.lock"]
exclude = ["**/__pycache__"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-q"]
